[metadata]
name = pytorch-medical-imaging
version = 0.1
description = API to train deep learning networks for medical imaging tasks with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
author = ML, Wong
author_email = lun.m.wong@cuhk.edu.hk
license = Apache-2.0
platforms = OS Independent
classifiers =
    Development Status :: WIP
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed

[extensions]
cython_c_files = True

[build_ext]
include_dirs =
    numpy.get_include()
inplace = True
force = True
define = CYTHON_TRACE_NOGIL=1

[options]
packages = pytorch_med_imaging
install_require =
    SimpleITK >= 2.1.1
    configparser>=3.7.3
    cython  = 0.29.13
    imageio >= 2.0.0
    nibabel>=3.2.1
    numpy>=1.16
    opencv-python>=4.4.0.44
    pydicom = 2.0.0
    pandas >= 1.5.2
    scikit-image>=0.14.2
    scikit-image>=1.0
    scikit-learn>=0.15.0
    scipy>=1.7.1
    setuptools
    tabulate >= 0.9.0
    tensorboard
    tensorboardx>=1.8
    torch>=1.11.0
    tqdm >= 4.64.0
    yaml >= 5.3.1
    torchio >= 0.18.37
    seaborn
    openpyxl
python_requires = >= 3.7
include_package_data = True
zip_safe = False

[cython-defaults]
sources =
    pytorch_med_imaging/med_img_dataset/computations/_LocalNeighborhoodDifferencePattern.pyx
    pytorch_med_imaging/med_img_dataset/computations/_prob_func.pyx
    pytorch_med_imaging/med_img_dataset/computations/_interpolation.pxd
language = c++

[options.packages.find]
where = pytorch_med_imaging


[options.entry_points]
console_scripts =
    pmi-main = pytorch_med_imaging.main:console_entry
    pmi-dicom2nii = pytorch_med_imaging.scripts.dicom2nii:console_entry
    pmi-analysis_segment = pytorch_med_imaging.scripts.analysis:segmentation_analysis
    pmi-match_dimension = pytorch_med_imaging.scripts.match_dimension:console_entry
    pmi-make_masks = pytorch_med_imaging.scripts.make_masks:console_entry
    pmi-labels_remap = pytorch_med_imaging.scripts.preprocessing_labelmaps:remap_label
    pmi-labels_statistic = pytorch_med_imaging.scripts.preprocessing_labelmaps:pmi_label_statistics
    pmi-gen_batch = pytorch_med_imaging.scripts.gen_batch:console_entry

[options.extras_require]
test =
    pytest
    coverage
    pytest-cov

[bdist_wheel]
universal = 1